# log-extract

./: README.md  pyproject.toml
src/log_extract/: __init__.py  cli.py  extractors.py  formatters.py
tests/: test_extractors.py  test_formatters.py
tests/fixtures/: sample_logs.txt
